--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "homepage": "",
   "author": {
-    "name": "TheMadnessTony",
+    "name": "themadnesstony",
     "email": "",
-    "url": "https://github.com/TheMadnessTony"
+    "url": "https://github.com/themadnesstony"
   },
   "files": [
     "generators"
