--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -20,6 +20,7 @@
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify-es": "^1.0.4"
+    "gulp-uglify-es": "^1.0.4",
+    "wiredep": "^4.0.0"
   }
 }
