--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -16,6 +16,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-filesize": "0.0.6",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
