update readme and titles

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,9 +1,9 @@
 {
   "generator-node": {
     "promptValues": {
-      "authorName": "TheMadnessTony",
+      "authorName": "themadnesstony",
       "authorEmail": "",
-      "authorUrl": "https://github.com/TheMadnessTony"
+      "authorUrl": "https://github.com/themadnesstony"
     }
   }
 }
